Continuing to refactor Dockerfile structures, adding in-line build to docker-composer.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,9 @@ services:
       - ./app:/app
       - /app/frontend/node_modules/
   backend:
-    image: garywongbc/python-36-gdal:v1
+    build:
+      context: .
+      dockerfile: ./docker-images/python-gdal/Dockerfile.centos  
     hostname: backend
     environment:
       DATABASE_SERVICE_NAME: postgres
