Allowing app to be run without specifying geos/gdal path (for mac and debian based systems)

--- a/app/backend/.envrc
+++ b/app/backend/.envrc
@@ -45,6 +45,7 @@ export S3_HOST=docs-moe-gwells-dev.pathfinder.gov.bc.ca
 export S3_ROOT_BUCKET=gwells-docs
 export SSO_IDP_HINT=idir
 export ENABLE_AQUIFERS_SEARCH=True
+export CUSTOM_GDAL_GEOS=False
 
 dotenv .secret_env
 
@@ -55,7 +56,7 @@ read prev_md5 _ <<< $(cat requirements.md5)
 if [ "$current_md5" != "$prev_md5" ]
 then
     echo "requirements.txt seems to have changed, running pip install."
-    pip install --upgrade -r requirements.txt
+    python -m pip install --upgrade -r requirements.txt
     echo "Storing md5 for current requirements.txt..."
     echo "$current_md5" > requirements.md5
 else
